# movieSearchApp

./: asset-manifest.json  index.html  package-lock.json
.github/workflows/: deploy.yml  node.js.yml
backend/: pyproject.toml  requirements.txt
backend/data/: app.py  db.py  movies.py  schemas.py  users.py  utils.py
backend/data/models/: movie_models.py  user_models.py
backend/testing/: app.py  connection_pool.py  db.py  main.py  movies.py
backend/testing/models/: movie_models.py  user_models.py
frontend/: .env.development  .env.production  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  MainPage.jsx  index.js
frontend/src/components/: AddToFavorites.js  FavouriteMovies.jsx  Login.jsx  MovieList.js  MovieListHeading.js  PopUpModal.jsx  Register.jsx  SaveMovieToDb.js
frontend/src/components/Stores/: AppStore.js  ContextStore.jsx  authSlice.js  reducer.js  reduxStore.js
frontend/src/components/layouts/: NavigationBar.jsx
static/css/: main.e6718ec9.css  main.e6718ec9.css.map
static/js/: main.05b64792.js  main.05b64792.js.map  main.91521963.js  main.91521963.js.map  main.96a6cb48.js  main.96a6cb48.js.map  main.a5832546.js  main.a5832546.js.map  main.b0df7ebe.js  main.b0df7ebe.js.map  main.c206903f.js  main.c206903f.js.map  main.ec1c4e5b.js  main.ec1c4e5b.js.map
